--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       const canvas = document.getElementById("myCanvas");
       const ctx = canvas.getContext("2d");
 
+      // BALL
       let x = canvas.width / 2;
       let y = canvas.height - 30;
       let dx = 2;
@@ -36,10 +37,55 @@
         ctx.closePath();
       }
 
+      // PADDLE
+      const paddleHeight = 10;
+      const paddleWidth = 75;
+      let paddleX = (canvas.width - paddleWidth) / 2;
+
+      function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(
+          paddleX,
+          canvas.height - paddleHeight,
+          paddleWidth,
+          paddleHeight
+        );
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+      }
+
+      // PADDLE CONTROL
+      let rightPressed = false;
+      let leftPressed = false;
+
+      function keyDownHandler(e) {
+        if (e.key === "Right" || e.key === "ArrowRight") {
+          rightPressed = true;
+        } else if (e.key === "Left" || e.key === "ArrowLeft") {
+          leftPressed = true;
+        }
+      }
+
+      function keyUpHandler(e) {
+        if (e.key === "Right" || e.key === "ArrowRight") {
+          rightPressed = false;
+        } else if (e.key === "Left" || e.key === "ArrowLeft") {
+          leftPressed = false;
+        }
+      }
+
+      document.addEventListener("keydown", keyDownHandler, false);
+      document.addEventListener("keyup", keyUpHandler, false);
+
+      // GAME
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        drawBall();
 
+        drawBall();
+        drawPaddle();
+
+        // BALL
         if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
           dx = -dx;
         }
@@ -50,6 +96,13 @@
 
         x += dx;
         y += dy;
+
+        // PADDLE
+        if (rightPressed) {
+          paddleX = Math.min(paddleX + 7, canvas.width - paddleWidth);
+        } else if (leftPressed) {
+          paddleX = Math.max(paddleX - 7, 0);
+        }
       }
 
       setInterval(draw, 10);
