Ball and Paddle collision

--- a/index.html
+++ b/index.html
@@ -93,9 +93,13 @@
         if (y + dy < ballRadius) {
           dy = -dy;
         } else if (y + dy > canvas.height - ballRadius) {
-          alert("GAME OVER");
-          document.location.reload();
-          clearInterval(interval); // Needed for Chrome to end game
+          if (x > paddleX && x < paddleX + paddleWidth) {
+            dy = -dy;
+          } else {
+            alert("GAME OVER");
+            document.location.reload();
+            clearInterval(interval);
+          }
         }
 
         x += dx;
