--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       document.addEventListener("keyup", keyUpHandler, false);
 
       // BRICKS
-      const brickRowCount = 3;
-      const brickColumnCount = 5;
+      const brickRowCount = 2;
+      const brickColumnCount = 2;
       const brickWidth = 75;
       const brickHeight = 20;
       const brickPadding = 10;
@@ -119,17 +119,35 @@
         for (let c = 0; c < brickColumnCount; c++) {
           for (let r = 0; r < brickRowCount; r++) {
             const b = bricks[c][r];
-            if (
-              x > b.x &&
-              x < b.x + brickWidth &&
-              y > b.y &&
-              y < b.y + brickHeight
-            ) {
-              dy = -dy;
-              b.status = 0;
+            if (b.status == 1) {
+              if (
+                x > b.x &&
+                x < b.x + brickWidth &&
+                y > b.y &&
+                y < b.y + brickHeight
+              ) {
+                dy = -dy;
+                b.status = 0;
+                score++;
+
+                if (score === brickRowCount * brickColumnCount) {
+                  alert("YOU WIN, CONGRATULATIONS!");
+                  document.location.reload();
+                  clearInterval(interval); // Needed for Chrome to end game
+                }
+              }
             }
           }
         }
+      }
+
+      // SCORE
+      let score = 0;
+
+      function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText(`Score: ${score}`, 8, 20);
       }
 
       // GAME
@@ -139,6 +157,7 @@
         drawBricks();
         drawBall();
         drawPaddle();
+        drawScore();
 
         collisionDetection();
 
