--- a/index.html
+++ b/index.html
@@ -75,12 +75,33 @@
         }
       }
 
+      function mouseMoveHandler(e) {
+        // e.clientX = Position of cursor on document
+        // canvas.offsetLeft = First X position of canvas on document
+        // mouseXInsideCanvas = Real position of cursor inside canvas, starting from 0
+        const mouseXInsideCanvas = e.clientX - canvas.offsetLeft;
+
+        // Position of cursor in the middle of paddle
+        const relativeX = mouseXInsideCanvas - paddleWidth / 2;
+
+        const rightLimit = canvas.width - paddleWidth;
+
+        if (relativeX > 0 && relativeX < rightLimit) {
+          paddleX = relativeX;
+        } else if (relativeX >= rightLimit) {
+          paddleX = rightLimit;
+        } else if (relativeX <= 0) {
+          paddleX = 0;
+        }
+      }
+
       document.addEventListener("keydown", keyDownHandler, false);
       document.addEventListener("keyup", keyUpHandler, false);
+      document.addEventListener("mousemove", mouseMoveHandler, false);
 
       // BRICKS
-      const brickRowCount = 2;
-      const brickColumnCount = 2;
+      const brickRowCount = 3;
+      const brickColumnCount = 5;
       const brickWidth = 75;
       const brickHeight = 20;
       const brickPadding = 10;
@@ -119,6 +140,7 @@
         for (let c = 0; c < brickColumnCount; c++) {
           for (let r = 0; r < brickRowCount; r++) {
             const b = bricks[c][r];
+
             if (b.status == 1) {
               if (
                 x > b.x &&
