--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@
         ctx.fillText(`Score: ${score}`, 8, 20);
       }
 
+      // LIVES
+      let lives = 3;
+
+      function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText(`Lives: ${lives}`, canvas.width - 65, 20);
+      }
+
       // GAME
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -180,6 +189,7 @@
         drawBall();
         drawPaddle();
         drawScore();
+        drawLives();
 
         collisionDetection();
 
@@ -194,9 +204,19 @@
           if (x > paddleX && x < paddleX + paddleWidth) {
             dy = -dy;
           } else {
-            alert("GAME OVER");
-            document.location.reload();
-            clearInterval(interval);
+            lives--;
+
+            if (!lives) {
+              alert("GAME OVER");
+              document.location.reload();
+              clearInterval(interval); // Needed for Chrome to end game
+            } else {
+              x = canvas.width / 2;
+              y = canvas.height - 30;
+              dx = 2;
+              dy = -2;
+              paddleX = (canvas.width - paddleWidth) / 2;
+            }
           }
         }
 
