--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
                 if (score === brickRowCount * brickColumnCount) {
                   alert("YOU WIN, CONGRATULATIONS!");
                   document.location.reload();
-                  clearInterval(interval); // Needed for Chrome to end game
                 }
               }
             }
@@ -209,7 +208,6 @@
             if (!lives) {
               alert("GAME OVER");
               document.location.reload();
-              clearInterval(interval); // Needed for Chrome to end game
             } else {
               x = canvas.width / 2;
               y = canvas.height - 30;
@@ -229,9 +227,11 @@
         } else if (leftPressed && paddleX > 0) {
           paddleX -= 7;
         }
+
+        requestAnimationFrame(draw);
       }
 
-      const interval = setInterval(draw, 10);
+      draw();
     </script>
   </body>
 </html>
