--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
       let dx = 2;
       let dy = -2;
       const ballRadius = 10;
+      let ballCollised = false;
 
       function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
-        ctx.fillStyle = "#0095DD";
+        ctx.fillStyle = ballCollised ? "red" : "#0095DD";
         ctx.fill();
         ctx.closePath();
       }
@@ -137,6 +138,8 @@
       }
 
       function collisionDetection() {
+        ballCollised = false;
+
         for (let c = 0; c < brickColumnCount; c++) {
           for (let r = 0; r < brickRowCount; r++) {
             const b = bricks[c][r];
@@ -151,6 +154,7 @@
                 dy = -dy;
                 b.status = 0;
                 score++;
+                ballCollised = true;
 
                 if (score === brickRowCount * brickColumnCount) {
                   alert("YOU WIN, CONGRATULATIONS!");
