cleaning the code to start with phaser

--- a/index.html
+++ b/index.html
@@ -15,227 +15,5 @@
       }
     </style>
   </head>
-  <body>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
-
-    <script>
-      const canvas = document.getElementById("myCanvas");
-      const ctx = canvas.getContext("2d");
-
-      // BALL
-      let x = canvas.width / 2;
-      let y = canvas.height - 30;
-      let dx = 2;
-      let dy = -2;
-      const ballRadius = 10;
-      let ballCollised = false;
-
-      function drawBall() {
-        ctx.beginPath();
-        ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
-        ctx.fillStyle = ballCollised ? "red" : "#0095DD";
-        ctx.fill();
-        ctx.closePath();
-      }
-
-      // PADDLE
-      const paddleHeight = 10;
-      const paddleWidth = 75;
-      let paddleX = (canvas.width - paddleWidth) / 2;
-
-      function drawPaddle() {
-        ctx.beginPath();
-        ctx.rect(
-          paddleX,
-          canvas.height - paddleHeight,
-          paddleWidth,
-          paddleHeight
-        );
-        ctx.fillStyle = "#0095DD";
-        ctx.fill();
-        ctx.closePath();
-      }
-
-      // PADDLE CONTROL
-      let rightPressed = false;
-      let leftPressed = false;
-
-      function keyDownHandler(e) {
-        if (e.key === "Right" || e.key === "ArrowRight") {
-          rightPressed = true;
-        } else if (e.key === "Left" || e.key === "ArrowLeft") {
-          leftPressed = true;
-        }
-      }
-
-      function keyUpHandler(e) {
-        if (e.key === "Right" || e.key === "ArrowRight") {
-          rightPressed = false;
-        } else if (e.key === "Left" || e.key === "ArrowLeft") {
-          leftPressed = false;
-        }
-      }
-
-      function mouseMoveHandler(e) {
-        // e.clientX = Position of cursor on document
-        // canvas.offsetLeft = First X position of canvas on document
-        // mouseXInsideCanvas = Real position of cursor inside canvas, starting from 0
-        const mouseXInsideCanvas = e.clientX - canvas.offsetLeft;
-
-        // Position of cursor in the middle of paddle
-        const relativeX = mouseXInsideCanvas - paddleWidth / 2;
-
-        const rightLimit = canvas.width - paddleWidth;
-
-        if (relativeX > 0 && relativeX < rightLimit) {
-          paddleX = relativeX;
-        } else if (relativeX >= rightLimit) {
-          paddleX = rightLimit;
-        } else if (relativeX <= 0) {
-          paddleX = 0;
-        }
-      }
-
-      document.addEventListener("keydown", keyDownHandler, false);
-      document.addEventListener("keyup", keyUpHandler, false);
-      document.addEventListener("mousemove", mouseMoveHandler, false);
-
-      // BRICKS
-      const brickRowCount = 3;
-      const brickColumnCount = 5;
-      const brickWidth = 75;
-      const brickHeight = 20;
-      const brickPadding = 10;
-      const brickOffsetTop = 30;
-      const brickOffsetLeft = 30;
-
-      const bricks = [];
-      for (let c = 0; c < brickColumnCount; c++) {
-        bricks[c] = [];
-        for (let r = 0; r < brickRowCount; r++) {
-          bricks[c][r] = { x: 0, y: 0, status: 1 };
-        }
-      }
-
-      function drawBricks() {
-        for (let c = 0; c < brickColumnCount; c++) {
-          for (let r = 0; r < brickRowCount; r++) {
-            if (bricks[c][r].status === 1) {
-              const brickX = c * (brickWidth + brickPadding) + brickOffsetLeft;
-              const brickY = r * (brickHeight + brickPadding) + brickOffsetTop;
-
-              bricks[c][r].x = brickX;
-              bricks[c][r].y = brickY;
-
-              ctx.beginPath();
-              ctx.rect(brickX, brickY, brickWidth, brickHeight);
-              ctx.fillStyle = "#0095DD";
-              ctx.fill();
-              ctx.closePath();
-            }
-          }
-        }
-      }
-
-      function collisionDetection() {
-        ballCollised = false;
-
-        for (let c = 0; c < brickColumnCount; c++) {
-          for (let r = 0; r < brickRowCount; r++) {
-            const b = bricks[c][r];
-
-            if (b.status == 1) {
-              if (
-                x > b.x &&
-                x < b.x + brickWidth &&
-                y > b.y &&
-                y < b.y + brickHeight
-              ) {
-                dy = -dy;
-                b.status = 0;
-                score++;
-                ballCollised = true;
-
-                if (score === brickRowCount * brickColumnCount) {
-                  alert("YOU WIN, CONGRATULATIONS!");
-                  document.location.reload();
-                }
-              }
-            }
-          }
-        }
-      }
-
-      // SCORE
-      let score = 0;
-
-      function drawScore() {
-        ctx.font = "16px Arial";
-        ctx.fillStyle = "#0095DD";
-        ctx.fillText(`Score: ${score}`, 8, 20);
-      }
-
-      // LIVES
-      let lives = 3;
-
-      function drawLives() {
-        ctx.font = "16px Arial";
-        ctx.fillStyle = "#0095DD";
-        ctx.fillText(`Lives: ${lives}`, canvas.width - 65, 20);
-      }
-
-      // GAME
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-        drawBricks();
-        drawBall();
-        drawPaddle();
-        drawScore();
-        drawLives();
-
-        collisionDetection();
-
-        // BALL
-        if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
-          dx = -dx;
-        }
-
-        if (y + dy < ballRadius) {
-          dy = -dy;
-        } else if (y + dy > canvas.height - ballRadius) {
-          if (x > paddleX && x < paddleX + paddleWidth) {
-            dy = -dy;
-          } else {
-            lives--;
-
-            if (!lives) {
-              alert("GAME OVER");
-              document.location.reload();
-            } else {
-              x = canvas.width / 2;
-              y = canvas.height - 30;
-              dx = 2;
-              dy = -2;
-              paddleX = (canvas.width - paddleWidth) / 2;
-            }
-          }
-        }
-
-        x += dx;
-        y += dy;
-
-        // PADDLE
-        if (rightPressed && paddleX < canvas.width - paddleWidth) {
-          paddleX += 7;
-        } else if (leftPressed && paddleX > 0) {
-          paddleX -= 7;
-        }
-
-        requestAnimationFrame(draw);
-      }
-
-      draw();
-    </script>
-  </body>
+  <body></body>
 </html>
