--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>Gamedev Phaser Workshop - lesson 01: Initialize the framework</title>
     <style>
       * {
         padding: 0;
         margin: 0;
       }
-      canvas {
-        background: #eee;
-        display: block;
-        margin: 0 auto;
-      }
     </style>
+    <script src="js/phaser.2.4.2.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script>
+      const game = new Phaser.Game(480, 320, Phaser.CANVAS, null, {
+        preload,
+        create,
+        update,
+      });
+
+      function preload() {
+        game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+        game.scale.pageAlignHorizontally = true;
+        game.scale.pageAlignVertically = true;
+        game.stage.backgroundColor = "#eee";
+      }
+
+      function create() {}
+      function update() {}
+    </script>
+  </body>
 </html>
