--- a/index.html
+++ b/index.html
@@ -19,15 +19,25 @@
         update,
       });
 
+      let ball;
+
       function preload() {
         game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
         game.scale.pageAlignHorizontally = true;
         game.scale.pageAlignVertically = true;
         game.stage.backgroundColor = "#eee";
+
+        game.load.image("ball", "img/ball.png");
       }
 
-      function create() {}
-      function update() {}
+      function create() {
+        ball = game.add.sprite(50, 50, "ball");
+      }
+
+      function update() {
+        ball.x += 1;
+        ball.y += 1;
+      }
     </script>
   </body>
 </html>
