added ball physics

--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
       }
 
       function create() {
+        game.physics.startSystem(Phaser.Physics.ARCADE);
+
         ball = game.add.sprite(50, 50, "ball");
+
+        game.physics.enable(ball, Phaser.Physics.ARCADE);
+
+        ball.body.velocity.set(150, 150);
+        // ball.body.gravity.y = 100;
       }
 
-      function update() {
-        ball.x += 1;
-        ball.y += 1;
-      }
+      function update() {}
     </script>
   </body>
 </html>
