--- a/index.html
+++ b/index.html
@@ -21,6 +21,50 @@
 
       let ball;
       let paddle;
+      let bricks;
+      let newBrick;
+      let brickInfo;
+
+      function initBricks() {
+        brickInfo = {
+          width: 50,
+          height: 20,
+          count: {
+            row: 3,
+            col: 7,
+          },
+          offset: {
+            top: 50,
+            left: 60,
+          },
+          padding: 10,
+        };
+
+        bricks = game.add.group();
+
+        for (let c = 0; c < brickInfo.count.col; c++) {
+          for (let r = 0; r < brickInfo.count.row; r++) {
+            const brickX =
+              c * (brickInfo.width + brickInfo.padding) + brickInfo.offset.left;
+
+            const brickY =
+              r * (brickInfo.height + brickInfo.padding) + brickInfo.offset.top;
+
+            newBrick = game.add.sprite(brickX, brickY, "brick");
+
+            game.physics.enable(newBrick, Phaser.Physics.ARCADE);
+
+            newBrick.body.immovable = true;
+            newBrick.anchor.set(0.5);
+
+            bricks.add(newBrick);
+          }
+        }
+      }
+
+      function ballHitBrick(ball, brick) {
+        brick.kill();
+      }
 
       function preload() {
         game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
@@ -30,6 +74,7 @@
 
         game.load.image("ball", "img/ball.png");
         game.load.image("paddle", "img/paddle.png");
+        game.load.image("brick", "img/brick.png");
       }
 
       function create() {
@@ -77,10 +122,13 @@
 
         // GAME
         game.physics.arcade.checkCollision.down = false;
+
+        initBricks();
       }
 
       function update() {
         game.physics.arcade.collide(ball, paddle);
+        game.physics.arcade.collide(ball, bricks, ballHitBrick);
 
         // game.world.width * 0.5 = in the center of the canvas
         paddle.x = game.input.x || game.world.width * 0.5;
