--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
 
         score += 10;
         scoreText.setText(`Points: ${score}`);
+
+        let count_alive = 0;
+
+        for (let i = 0; i < bricks.children.length; i++) {
+          if (bricks.children[i].alive) {
+            count_alive++;
+          }
+        }
+
+        if (count_alive === 0) {
+          alert("You won the game, congratulations!");
+          location.reload();
+        }
       }
 
       function preload() {
